--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -2,17 +2,18 @@
   display: block;
   width: 300px;
   margin: 30px auto 30px auto;
+  padding-bottom: 0;
   text-align: center;
   border: 1px solid rgba(0, 0, 0, 0.12);
+  border-radius: 5px;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .Description {
   display: block;
-  margin: 10px auto 150px auto;
+  margin: 10px auto 20px auto;
   width: 300px;
-  height: 100px;
 }
 
 .Avatar {
@@ -23,7 +24,37 @@
   overflow: hidden;
 }
 
+.Name {
+  font-weight: 700;
+  font-size: 20px;
+  margin-bottom: 5px;
+}
+
+.Tag,
+.Location {
+  margin-top: 0;
+  margin-bottom: 5px;
+  color: rgba(0, 0, 0, 0.4);
+}
+
 .Stats {
   display: flex;
   list-style: none;
+  justify-content: center;
+  margin-bottom: 0;
+  padding: 0;
+  background-color: blanchedalmond;
+  border-top: 1px solid rgba(0, 0, 0, 0.12);
+}
+
+.Stats li {
+  width: calc(100% / 3);
+  margin: 0;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-right: 1px solid rgba(0, 0, 0, 0.12);
+}
+
+.Label {
+  display: block;
 }
