--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -57,4 +57,11 @@
 
 .Label {
   display: block;
+  margin-bottom: 5px;
+  color: rgba(0, 0, 0, 0.4);
+}
+
+.Quantity {
+  font-weight: 700;
+  font-size: 20px;
 }
